<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">



            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:gravity="start"
                    android:layout_margin="2dp"
                    android:text="@string/miracles_of_jesus"
                    android:textSize="21sp"
                    android:id="@+id/miracle"
                    android:padding="1dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/matthew"
                        android:layout_weight="1"
                        android:textSize="19sp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:id="@+id/matthew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/mark"
                        android:layout_weight="1"
                        android:textSize="19sp"
                        android:id="@+id/mark"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/luke"
                        android:layout_weight="1"
                        android:textSize="19sp"
                        android:id="@+id/luke"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/john"
                        android:layout_weight="1"
                        android:textSize="19sp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:id="@+id/john"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />



                </LinearLayout>

            </LinearLayout>
    </androidx.cardview.widget.CardView>



