<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
tools:context="com.shalomchurch.shalombible.bibleDisplay.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">


        <TextView
            android:id="@+id/tex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>



        <TextView
            android:id="@+id/tey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/chapter"
            android:gravity="center"
            android:layout_weight="1.5"/>

        <TextView
            android:id="@+id/tez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/verse"
            android:layout_weight="1.5"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/drop">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:spinnerMode="dialog" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1.5"
            android:background="@drawable/drop">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:spinnerMode="dialog" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1.5"
            android:background="@drawable/drop">

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:spinnerMode="dialog" />
        </RelativeLayout>

    </LinearLayout>
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#002aff"
        android:dividerHeight="1dp"
        />

</LinearLayout>